@@ -1,5 +1,6 @@
 package search;
 
+import menu.Message;
 import models.Book;
 import models.Car;
 import models.RootCrop;
@@ -9,13 +10,48 @@ import java.util.Comparator;
 import java.util.Scanner;
 
 public class BinarySearch<T> implements SearchingStrategy<T> {
+    public static <T> T classOptionsForSearch(ArrayList<T> list, String className, String sortBy, Scanner scanner, String messageInvalidCommand, String dashLine) {
+        scanner.nextLine();
+        String searchParam = scanner.nextLine().toLowerCase();
+
+        if (searchParam.isEmpty()) {
+            Message.emptyString(dashLine);
+            return null;
+        }
+
+        switch (className) {
+            case "car", "book", "rootcrop":
+                BinarySearch.searchResultObject(searchParam, sortBy, list, dashLine);
+                break;
+
+            default:
+                System.out.println(messageInvalidCommand);
+                break;
+        }
+        return null;
+    }
+
+    public static <T> T searchResultObject(String searchParam, String sortBy, ArrayList<T> list, String dashLine) {
+        SearchingContext<T> searchingContext = new SearchingContext<>(new BinarySearch<>());
+        int index = searchingContext.performSearch(sortBy, searchParam, list, dashLine);
+        T searchResult;
+
+        if (index < 0 || index > list.size()) {
+            Message.cantFindObject(dashLine);
+            return null;
+        } else {
+            searchResult = list.get(index);
+            Message.searchResultWithIndex(index, searchResult, dashLine);
+            return searchResult;
+        }
+    }
+
     @Override
     public int search(String searchType, String searchParam, ArrayList<T> list, String dashLine) {
         if (list.isEmpty()) {
             return -1;
         }
-
-        T example = list.get(0);
+        T example = list.getFirst();
 
         if (example instanceof Car) {
             return searchInCars(searchType, searchParam, (ArrayList<Car>) list, dashLine);
@@ -33,14 +69,28 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
 
         switch (searchType) {
             case "power":
+                try {
+                    Integer.parseInt(searchParam);
+                } catch (NumberFormatException e) {
+                    Message.wrongFormatNum(dashLine);
+                    return -1;
+                }
+
                 carComparator = Comparator.comparingInt(Car::getPower);
                 index = indexedBinarySearch(list, new Car.Builder().power(Integer.parseInt(searchParam)).model(null).year(0).build(), carComparator);
                 return index;
-            case "models":
+            case "model":
                 carComparator = Comparator.comparing(Car::getModel);
                 index = indexedBinarySearch(list, new Car.Builder().power(0).model(searchParam).year(0).build(), carComparator);
                 return index;
             case "year":
+                try {
+                    Integer.parseInt(searchParam);
+                } catch (NumberFormatException e) {
+                    Message.wrongFormatNum(dashLine);
+                    return -1;
+                }
+
                 carComparator = Comparator.comparingInt(Car::getYear);
                 index = indexedBinarySearch(list, new Car.Builder().power(0).model(null).year(Integer.parseInt(searchParam)).build(), carComparator);
                 return index;
@@ -63,6 +113,13 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
                 index = indexedBinarySearch(list, new Book.Builder().author(null).name(searchParam).pages(0).build(), bookComparator);
                 return index;
             case "pages":
+                try {
+                    Integer.parseInt(searchParam);
+                } catch (NumberFormatException e) {
+                    Message.wrongFormatNum(dashLine);
+                    return -1;
+                }
+
                 bookComparator = Comparator.comparingInt(Book::getPages);
                 index = indexedBinarySearch(list, new Book.Builder().author(null).name(null).pages(Integer.parseInt(searchParam)).build(), bookComparator);
                 return index;
@@ -78,15 +135,22 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
         switch (searchType) {
             case "type":
                 rootCropComparator = Comparator.comparing(RootCrop::getType);
-                index = indexedBinarySearch(list, new RootCrop.Builder().type(searchParam).weight(null).color(null).build(), rootCropComparator);
+                index = indexedBinarySearch(list, new RootCrop.Builder().type(searchParam).weight(0.0).color(null).build(), rootCropComparator);
                 return index;
             case "weight":
+                try {
+                    Double.parseDouble(searchParam);
+                } catch (NumberFormatException e) {
+                    Message.wrongFormatNum(dashLine);
+                    return -1;
+                }
+
                 rootCropComparator = Comparator.comparingDouble(RootCrop::getWeight);
                 index = indexedBinarySearch(list, new RootCrop.Builder().type(null).weight(Double.parseDouble(searchParam)).color(null).build(), rootCropComparator);
                 return index;
             case "color":
                 rootCropComparator = Comparator.comparing(RootCrop::getColor);
-                index = indexedBinarySearch(list, new RootCrop.Builder().type(null).weight(null).color(searchParam).build(), rootCropComparator);
+                index = indexedBinarySearch(list, new RootCrop.Builder().type(null).weight(0.0).color(searchParam).build(), rootCropComparator);
                 return index;
             default:
                 return -1;
@@ -111,87 +175,5 @@ public class BinarySearch<T> implements SearchingStrategy<T> {
                 return mid;
         }
         return -(low + 1);
-    }
-
-    public static <T> T searchResultObject(ArrayList<T> list, String sortBy, Scanner scanner, String messageInvalidCommand, String dashLine) {
-        String searchString = scanner.next().toLowerCase();
-        String[] searchArr = searchString.split(",");
-        String searchClass = searchArr[0];
-
-        if (searchArr.length != 3) {
-            System.out.println(messageInvalidCommand);
-        } else {
-            String searchType = searchArr[1];
-            String searchParam = searchArr[2];
-            T searchResult;
-
-            String messageInvalidSearchType = messageInvalidCommand + "\n- Ты написал тип '" + searchType + "', которого нет у класса '" + searchClass + "'.";
-            String messageSortByNotEqualToSearchType = messageInvalidCommand + "\n- Ты написал параметр '" + searchType + "', хотя сейчас ты можешь искать только по параметру '" + sortBy + "'.";
-
-            boolean isCarFindable = (searchType.equals("power") && searchType.equals(sortBy) || searchType.equals("model") && searchType.equals(sortBy) || searchType.equals("year") && searchType.equals(sortBy));
-            boolean isBookFindable = (searchType.equals("author") && searchType.equals(sortBy) || searchType.equals("name") && searchType.equals(sortBy) || searchType.equals("pages") && searchType.equals(sortBy));
-            boolean isRootCropFindable = (searchType.equals("type") && searchType.equals(sortBy) || searchType.equals("weight") && searchType.equals(sortBy) || searchType.equals("color") && searchType.equals(sortBy));
-
-            switch (searchClass) {
-                case "car":
-                    if (isCarFindable) {
-                        searchResult = BinarySearch.searchResultIndex(searchType, searchParam, list, dashLine);
-                        return searchResult;
-                    } else if (!searchType.equals(sortBy)) {
-                        System.out.println(messageSortByNotEqualToSearchType);
-                    } else {
-                        System.out.println(messageInvalidSearchType);
-                    }
-                    break;
-
-                case "book":
-                    if (isBookFindable) {
-                        searchResult = BinarySearch.searchResultIndex(searchType, searchParam, list, dashLine);
-                        return searchResult;
-                    } else if (!searchType.equals(sortBy)) {
-                        System.out.println(messageSortByNotEqualToSearchType);
-                    } else {
-                        System.out.println(messageInvalidSearchType);
-                    }
-                    break;
-
-                case "rootcrop":
-                    if (isRootCropFindable) {
-                        searchResult = BinarySearch.searchResultIndex(searchType, searchParam, list, dashLine);
-                        return searchResult;
-                    } else if (!searchType.equals(sortBy)) {
-                        System.out.println(messageSortByNotEqualToSearchType);
-                    } else {
-                        System.out.println(messageInvalidSearchType);
-                    }
-                    break;
-
-                default:
-                    System.out.println(messageInvalidCommand);
-                    return null;
-            }
-        }
-
-        return null;
-    }
-
-    public static <T> T searchResultIndex(String searchType, String searchParam, ArrayList<T> list, String dashLine) {
-        SearchingContext<T> searchingContext = new SearchingContext<>(new BinarySearch<>());
-        int index = searchingContext.performSearch(searchType, searchParam, list, dashLine);
-        String messageCantFindElement = dashLine + "\nОбъекта с этими данными в массиве нет";
-        T searchResult;
-
-        if (index < 0 || index > list.size()) {
-            System.out.println(messageCantFindElement);
-            return null;
-        } else {
-            searchResult = list.get(index);
-
-            System.out.println(dashLine);
-            System.out.println("Index: " + index);
-            System.out.println(searchResult);
-
-            return searchResult;
-        }
     }
 }
